--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "Jussi Kinnula <jussi.kinnula@gmail.com>"
   ],
   "engines": {
-    "node": "^8.0.0",
-    "npm": "^5.0.0"
+    "node": "^8.11.1",
+    "npm": "^5.6.0"
   },
   "scripts": {
     "build": "npm run build:lib",
@@ -25,32 +25,36 @@
     "lint": "tslint --project ./tsconfig.lib.json"
   },
   "dependencies": {},
+  "peerDependencies": {
+    "@types/react": "^16.3.2"
+  },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/node": "^8.0.53",
-    "@types/react": "^16.0.25",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-router-dom": "^4.2.2",
-    "@types/webpack": "^3.8.1",
-    "@types/webpack-env": "^1.13.2",
-    "@types/webpack-merge": "4.1.1",
+    "@types/node": "^9.6.1",
+    "@types/react": "^16.3.2",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.6",
+    "@types/webpack": "^4.1.3",
+    "@types/webpack-env": "^1.13.5",
+    "@types/webpack-merge": "4.1.3",
     "classnames": "^2.2.5",
-    "css-loader": "^0.28.7",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "css-loader": "^0.28.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.19.0",
+    "style-loader": "^0.20.3",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "ts-loader": "^3.1.1",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-config-airbnb": "^5.4.2",
-    "typescript": "^2.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "stylus-loader": "^3.0.2",
+    "ts-loader": "^4.1.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.8.0",
+    "typescript": "^2.8.1",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
