--- a/package.json
+++ b/package.json
@@ -26,35 +26,36 @@
   },
   "dependencies": {},
   "peerDependencies": {
-    "@types/react": "^16.3.2"
+    "@types/react": "^16.4.6",
+    "react": "^16.4.1"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/node": "^9.6.1",
-    "@types/react": "^16.3.2",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/webpack": "^4.1.3",
-    "@types/webpack-env": "^1.13.5",
+    "@types/classnames": "^2.2.4",
+    "@types/node": "^10.5.2",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/webpack": "^4.4.5",
+    "@types/webpack-env": "^1.13.6",
     "@types/webpack-merge": "4.1.3",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.11",
+    "classnames": "^2.2.6",
+    "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "react-router-dom": "^4.2.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "ts-loader": "^4.1.0",
-    "ts-node": "^5.0.1",
-    "tslint": "^5.9.1",
-    "tslint-config-airbnb": "^5.8.0",
-    "typescript": "^2.8.1",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.9.2",
+    "typescript": "^2.9.2",
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
